Enable SSL in DB, Upgrade JDK to 16, upgrade SB to 2.4.4